# oranda-js

./: .all-contributorsrc  .eslintrc  .fiddly.config.json  .gitignore  .oranda.config.json  Deployment.md  Readme.md  deployment.html  index.html  now.json  package.json  style.css  tailwind.config.js
.github/workflows/: build.yaml  pages.yml  test.yaml
__tests__/: cli-integration.test.js
__tests__/test-readme/cargo/: Cargo.toml
__tests__/test-readme/package-json/: package.json
__tests__/test-readme/package-json/testoutput/: index.html  style.css
src/: cli.js
src/commands/: deploy.js  fiddly.js  lint.js  oranda.js  watch.js
src/commands/css/: _axo.scss  _dark.scss  _gh-corner.scss  _main.scss  _tabs.scss  _tacit.scss  night-owl.scss  prism-theme.scss  style.scss
src/utils/: createTabs.js  getOs.js  githubCorner.js  head.js  header.js  readOptions.js  remoteStyles.js  setMdParser.js  syntaxHighlightThemes.js
src/utils/constants/: messages.js
src/utils/steps/: copy.js  css.js  images.js
