[package]
name = "letsplayretrogames"
version = "0.2.8"
edition = "2021"
description = "A CLI for the letsplayretro.games website"
repository = "https://github.com/SaraVieira/letsplayretrogames-cli"
readme = "README.md"
keywords = ["letsplayretrogames"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/SaraVieira/letsplayretrogames-cli"
authors = ["Sara Vieira"]

[dependencies]
spinners = "4.1.0"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11.6", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls",
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
comfy-table = "6.1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[package.metadata.oranda]
dark-theme = true
dist = "sup"