[package]
name = "letsplayretrogames"
version = "0.2.8"
edition = "2021"
description = "A CLI for the letsplayretro.games website"
repository = "https://github.com/SaraVieira/letsplayretrogames-cli"
readme = "README.md"
keywords = ["letsplayretrogames"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/SaraVieira/letsplayretrogames-cli"
authors = ["Sara Vieira"]


[package.metadata.oranda]
theme = "dark"
dist = "sup"